--- a/src/StardustOS/StardustOS.csproj
+++ b/src/StardustOS/StardustOS.csproj
@@ -17,6 +17,7 @@
         <Profile>VMware</Profile>
         <Description>Use VMware Player or Workstation to deploy and debug.</Description>
         <PxeInterface>192.168.0.8</PxeInterface>
+        <ExtractMapFile>True</ExtractMapFile>
     </PropertyGroup>
 
     <ItemGroup>
