--- a/src/StardustOS/StardustOS.csproj
+++ b/src/StardustOS/StardustOS.csproj
@@ -21,6 +21,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="SDSystem\Resources\purple.bmp" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="SDSystem\Resources\purple.bmp" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Cosmos.Build" Version="0-*" NoWarn="NU1604" />
         <PackageReference Include="Cosmos.Debug.Kernel" Version="0-*" NoWarn="NU1604" />
         <PackageReference Include="Cosmos.System2" Version="0-*" NoWarn="NU1604" />
