--- a/src/StardustOS/StardustOS.csproj
+++ b/src/StardustOS/StardustOS.csproj
@@ -21,10 +21,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="SDSystem\Resources\file.bmp" />
+      <None Remove="SDSystem\Resources\folder.bmp" />
       <None Remove="SDSystem\Resources\purple.bmp" />
     </ItemGroup>
 
     <ItemGroup>
+      <EmbeddedResource Include="SDSystem\Resources\file.bmp" />
+      <EmbeddedResource Include="SDSystem\Resources\folder.bmp" />
       <EmbeddedResource Include="SDSystem\Resources\purple.bmp" />
     </ItemGroup>
 
